--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -691,7 +691,7 @@ hr {
   border: 0;
   outline: none;
   height: 3px;
-  background: transparent url("../images/hr.gif") center center repeat-x;
+  background: transparent url("../images/hr.png") center center repeat-x;
   margin: 0 0 20px;
 }
 
