--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -54,6 +54,8 @@ a {color: #E2413A; text-decoration: none;}
 #social-facebook {position: relative; top: -12px; color: #436EAC;}
 #social-twitter {position: relative; top: -12px; color: #0598C9;}
 
+#navirel {position: relative;}
+
 /* bootstrap */
 
 .navbar{*position:relative;*z-index:2;overflow:visible;margin-bottom:18px;}
