--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,7 +55,7 @@ a {color: #E2413A; text-decoration: none;}
 .green {color: #078125}
 
 a.navis:link {color: white; font-size: 17px;}
-a.navis:active {color: white; font-size: 17px;}
+a.navis:active {color: #E2413A; font-size: 17px;}
 a.navis:visited {color: white; font-size: 17px;}
 
 .social-gplus {position: relative; top: -12px;}
